reduced letter spacing to fix sizing issue

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -171,8 +171,6 @@ a:active {
     font-weight: 400;
     line-height: 3.125rem;
     font-variant: thin;
-    letter-spacing: .046em;
-
 }
 
 .whoWeAreFrame,
